# pic_layout_gdsfactory

./: .gitignore  pyproject.toml
book/pages/: gds_to_meep.ipynb
notebooks/: example_bends.ipynb
src/gfutil/: utilities.py
src/gfutil/pdk/: __init__.py  layer_map.py  xsections.py
src/gfutil/pdk/components/: __init__.py  dircoup.py  floorplan.py  grating_coupler.py  mmi.py  transitions.py
src/gfutil/structures/: add_fgc.py
